force-app/main/default/objects/tc9_pr__Pay_Advice__c/tc9_pr__Pay_Advice__c.object-meta.xml
<CustomObject>
    <label>Pay Advice</label>
    <nameField>
        <displayFormat>EPA {YYYY}{MM}{DD}{00000}</displayFormat>
        <label>Pay Advice Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pay Advices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>