force-app/main/default/objects/tc9_pr__Pay_Advice__c/fields/tc9_ec__Employee_formula__c.field-meta.xml
<CustomField>
    <fullName>tc9_ec__Employee_formula__c</fullName>
    <formula>tc9_pr__Employee__r.FirstName +&apos; &apos;+ tc9_pr__Employee__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Employee</label>
    <type>Text</type>
</CustomField>