force-app/main/default/objects/tc9_pr__Pay_Advice__c/fields/tc9_pr__Date_Paid__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Date_Paid__c</fullName>
    <description>Payment Date of the Pay Batch.</description>
    <inlineHelpText>Payment Date of the Pay Batch.</inlineHelpText>
    <label>Date Paid</label>
    <type>Date</type>
</CustomField>