force-app/main/default/objects/tc9_pr__Pay_Advice__c/fields/tc9_pr__Employee__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related Employee record.</description>
    <inlineHelpText>Related Employee record.</inlineHelpText>
    <label>Employee</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Pay Advices</relationshipLabel>
    <relationshipName>Pay_Advices</relationshipName>
    <type>Lookup</type>
</CustomField>