force-app/main/default/objects/tc9_pr__Pay_Advice__c/fields/tc9_pr__Gross_Earnings__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Gross_Earnings__c</fullName>
    <description>The total Gross Earnings of the pay advice record.</description>
    <inlineHelpText>The total Gross Earnings of the pay advice record.</inlineHelpText>
    <label>Gross Earnings</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>