force-app/main/default/objects/tc9_pr__Pay_Advice__c/fields/tc9_pr__GST__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__GST__c</fullName>
    <description>Goods and Services Tax for contractor payments.</description>
    <inlineHelpText>Goods and Services Tax for contractor payments.</inlineHelpText>
    <label>GST</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>