force-app/main/default/objects/tc9_pr__Pay_Advice__c/fields/tc9_pr__Link_Token__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Link_Token__c</fullName>
    <description>Link Token generated so that the payee can access the PDF created.</description>
    <inlineHelpText>Link Token generated so that the payee can access the PDF created.</inlineHelpText>
    <label>Link Token</label>
    <type>TextArea</type>
</CustomField>