force-app/main/default/objects/tc9_pr__Pay_Advice__c/fields/tc9_pr__Online_URL__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Online_URL__c</fullName>
    <description>URL generated so that the payee can access the PDF created.</description>
    <inlineHelpText>URL generated so that the payee can access the PDF created.</inlineHelpText>
    <label>Online URL</label>
    <length>256</length>
    <type>LongTextArea</type>
</CustomField>