force-app/main/default/objects/tc9_pr__Pay_Advice__c/fields/tc9_pr__Pay_Advice_Delivery_Method__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Pay_Advice_Delivery_Method__c</fullName>
    <description>Delivery Method for this pay advice record.</description>
    <inlineHelpText>Delivery Method for this pay advice record.</inlineHelpText>
    <label>Pay Advice Delivery Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email as PDF</fullName>
            </value>
            <value>
                <fullName>Email as URL</fullName>
            </value>
            <value>
                <fullName>Print</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>