force-app/main/default/objects/tc9_pr__Pay_Advice__c/fields/tc9_pr__Pay_Advice_Message__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Pay_Advice_Message__c</fullName>
    <description>Pay Advice Message which will be displayed on the PDF.</description>
    <inlineHelpText>Pay Advice Message which will be displayed on the PDF.</inlineHelpText>
    <label>Pay Advice Message</label>
    <type>TextArea</type>
</CustomField>