force-app/main/default/objects/tc9_pr__Pay_Advice__c/fields/tc9_pr__Pay_Advice_Sensitivity_Level__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Pay_Advice_Sensitivity_Level__c</fullName>
    <description>The nominated sensitivity of this pay advice record. Customised security can be implemented based on the value in this field. Where Assignments and the Payee record have a pay advice sensitivity the overriding level will be inherited from the Payee.</description>
    <inlineHelpText>The nominated sensitivity of this pay advice record. Customised security can be implemented based on the value in this field. Where Assignments and the Payee record have a pay advice sensitivity the overriding level will be inherited from the Payee.</inlineHelpText>
    <label>Pay Advice Sensitivity Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_pr__Pay_Advice_Sensitivity</valueSetName>
    </valueSet>
</CustomField>