force-app/main/default/objects/tc9_pr__Pay_Advice__c/fields/tc9_pr__Pay_Advice_Template__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Pay_Advice_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The template record used to control PDF rendering and email distribution</description>
    <inlineHelpText>The template record used to control PDF rendering and email distribution</inlineHelpText>
    <label>Pay Advice Template</label>
    <referenceTo>tc9_pr__Pay_Advice_Template__c</referenceTo>
    <relationshipLabel>Pay Advices</relationshipLabel>
    <relationshipName>Pay_Advices</relationshipName>
    <type>Lookup</type>
</CustomField>