force-app/main/default/objects/tc9_pr__Pay_Advice__c/fields/tc9_pr__Pay_Batch__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Pay_Batch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related Pay Batch record.</description>
    <inlineHelpText>Related Pay Batch record.</inlineHelpText>
    <label>Pay Batch</label>
    <referenceTo>tc9_pr__Pay_Batch__c</referenceTo>
    <relationshipLabel>Pay Advices</relationshipLabel>
    <relationshipName>Pay_Advices</relationshipName>
    <type>Lookup</type>
</CustomField>