force-app/main/default/objects/tc9_pr__Pay_Advice__c/fields/tc9_pr__Pay_Batch_Item__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Pay_Batch_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related Payee Pay Batch record.</description>
    <inlineHelpText>Related Payee Pay Batch record.</inlineHelpText>
    <label>Payee Pay Batch</label>
    <referenceTo>tc9_pr__Pay_Batch_Item__c</referenceTo>
    <relationshipLabel>Pay Advices</relationshipLabel>
    <relationshipName>Pay_Advices</relationshipName>
    <type>Lookup</type>
</CustomField>