force-app/main/default/objects/tc9_pr__Pay_Advice__c/fields/tc9_pr__Payment_Entity__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Payment_Entity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Payment Entity of the Pay Batch record.</description>
    <inlineHelpText>Payment Entity of the Pay Batch record.</inlineHelpText>
    <label>Payment Entity</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Pay Advices</relationshipLabel>
    <relationshipName>Pay_Advices</relationshipName>
    <type>Lookup</type>
</CustomField>