force-app/main/default/objects/tc9_pr__Pay_Advice__c/fields/tc9_pr__PDF_Generated__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__PDF_Generated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Default is set to False</description>
    <inlineHelpText>Default is set to False</inlineHelpText>
    <label>PDF Generated</label>
    <type>Checkbox</type>
</CustomField>