force-app/main/default/objects/tc9_pr__Pay_Advice__c/fields/tc9_pr__Period_End_Date__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Period_End_Date__c</fullName>
    <description>End Date of the Calendar Period.</description>
    <inlineHelpText>End Date of the Calendar Period.</inlineHelpText>
    <label>Period End Date</label>
    <type>Date</type>
</CustomField>