force-app/main/default/objects/tc9_pr__Pay_Advice__c/fields/tc9_pr__Period_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Period_Start_Date__c</fullName>
    <description>Start Date of the Calendar Period.</description>
    <inlineHelpText>Start Date of the Calendar Period.</inlineHelpText>
    <label>Period Start Date</label>
    <type>Date</type>
</CustomField>