force-app/main/default/objects/tc9_pr__Pay_Advice__c/fields/tc9_pr__Send_Email_After__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Send_Email_After__c</fullName>
    <description>Controls on which date and at what time the Pay Advice email notification will be sent to the employee</description>
    <inlineHelpText>Controls on which date and at what time the Pay Advice email notification will be sent to the employee</inlineHelpText>
    <label>Send Email After</label>
    <type>DateTime</type>
</CustomField>