force-app/main/default/objects/tc9_pr__Pay_Advice__c/fields/tc9_pr__Status__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Status__c</fullName>
    <description>The distribution status of the pay advice record</description>
    <inlineHelpText>The distribution status of the pay advice record</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Document Created</fullName>
            </value>
            <value>
                <fullName>Document Creation Failed</fullName>
            </value>
            <value>
                <fullName>Sent</fullName>
            </value>
            <value>
                <fullName>Sending Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>