force-app/main/default/objects/tc9_pr__Pay_Advice__c/recordTypes/tc9_pr__Contractor_Invoice.recordType-meta.xml
<RecordType>
    <fullName>tc9_pr__Contractor_Invoice</fullName>
    <active>true</active>
    <label>Contractor Invoice</label>
</RecordType>