force-app/main/default/objects/tc9_pr__Pay_Advice__c/recordTypes/tc9_pr__Pay_Advice.recordType-meta.xml
<RecordType>
    <fullName>tc9_pr__Pay_Advice</fullName>
    <active>true</active>
    <label>Pay Advice</label>
</RecordType>