force-app/main/default/objects/tc9_pr__Pay_Advice__c/listViews/tc9_pr__All.listView-meta.xml
<ListView>
    <fullName>tc9_pr__All</fullName>
    <columns>NAME</columns>
    <columns>tc9_pr__Employee__c</columns>
    <columns>tc9_pr__Payee__c</columns>
    <columns>tc9_pr__Status__c</columns>
    <columns>tc9_pr__Period_Start_Date__c</columns>
    <columns>tc9_pr__Period_End_Date__c</columns>
    <columns>tc9_pr__Date_Paid__c</columns>
    <columns>tc9_pr__Gross_Earnings__c</columns>
    <columns>tc9_pr__Net_Earnings__c</columns>
    <columns>tc9_pr__Pay_Batch__c</columns>
    <columns>tc9_pr__Pay_Batch_Item__c</columns>
    <columns>tc9_pr__Payment_Entity__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>