force-app/main/default/objects/tc9_pr__Pay_Advice__c/listViews/tc9_pr__Document_Creation_Failed.listView-meta.xml
<ListView>
    <fullName>tc9_pr__Document_Creation_Failed</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>tc9_pr__Employee__c</columns>
    <columns>tc9_pr__Payee__c</columns>
    <columns>tc9_pr__Status__c</columns>
    <columns>tc9_pr__Period_Start_Date__c</columns>
    <columns>tc9_pr__Period_End_Date__c</columns>
    <columns>tc9_pr__Date_Paid__c</columns>
    <columns>tc9_pr__Gross_Earnings__c</columns>
    <columns>tc9_pr__Net_Earnings__c</columns>
    <columns>tc9_pr__Pay_Batch__c</columns>
    <columns>tc9_pr__Payment_Entity__c</columns>
    <columns>tc9_pr__PDF_Generated__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>tc9_pr__Status__c</field>
        <operation>equals</operation>
        <value>Document Creation Failed</value>
    </filters>
    <label>Document Creation Failed</label>
</ListView>